css_err.txt
[36mvite v8.0.1 [32mbuilding client environment for development...[36m[39m
[2K
transforming...✓ 1924 modules transformed.
✗ Build failed in 843ms
error during build:
Build failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unknown at rule: @keyframes
4415 |  }
4416 |  
4417 |  @keyframes floatPulse {
     |                       ^
4418 |    0%, 100% { transform: translateY(0); }
4419 |    50% { transform: translateY(-4px); }
    at Module.<anonymous> (D:\set2\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///D:/set2/node_modules/vite/dist/node/chunks/node.js:21189:59)
    at async finalizeCss (file:///D:/set2/node_modules/vite/dist/node/chunks/node.js:21035:36)
    at async Promise.all (index 1)
    at async Object.run (file:///D:/set2/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (file:///D:/set2/node_modules/vite/dist/node/chunks/node.js:20574:19)
    at async plugin (file:///D:/set2/node_modules/rolldown/dist/shared/bindingify-input-options-DoaqRULI.mjs:1216:16)
    at async plugin.<computed> (file:///D:/set2/node_modules/rolldown/dist/shared/bindingify-input-options-DoaqRULI.mjs:1575:12)
    at aggregateBindingErrorsIntoJsError (file:///D:/set2/node_modules/rolldown/dist/shared/error-BO4SlZV_.mjs:48:18)
    at unwrapBindingResult (file:///D:/set2/node_modules/rolldown/dist/shared/error-BO4SlZV_.mjs:18:128)
    at #build (file:///D:/set2/node_modules/rolldown/dist/shared/rolldown-build-yQC7KN8K.mjs:3311:34)
    at async buildEnvironment (file:///D:/set2/node_modules/vite/dist/node/chunks/node.js:32817:64)
    at async Object.build (file:///D:/set2/node_modules/vite/dist/node/chunks/node.js:33239:19)
    at async Object.buildApp (file:///D:/set2/node_modules/vite/dist/node/chunks/node.js:33236:153)
    at async CAC.<anonymous> (file:///D:/set2/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}
